Start of a build.xml file, getting Bootstrap to work a little bit.